# iris

./: .gitignore  .pylintrc  LICENSE  QUICKSTART.md  README.md  ar_target_detector.py  cli.py  config.example.yaml  pyproject.toml
modules/: camera.py  config_loader.py  mqtt_handler.py  target_compiler.py  utils.py
